refactored test & test utils